# streamcraft

./: .gitignore  Cargo.toml  README.md  shell.nix
examples/: demux_decode.rs  hello_world.rs  print_file.rs
libav/: Cargo.toml  build.rs  wrapper.h
libav/examples/: open_media.rs
libav/src/: bindings.rs  lib.rs
libav/src/core/: mod.rs
libav/src/decoding/: mod.rs
libav/src/demuxing/: mod.rs
libav/src/encoding/: mod.rs
libav/src/error/: mod.rs
libav/src/muxing/: mod.rs
src/: lib.rs  main.rs
src/element_traits/: mod.rs
src/elements/: mod.rs  text.rs
src/elements/av/: audiodecoder.rs  demuxsrc.rs  mod.rs  videodecoder.rs
src/elements/conversion/: bytes2text.rs  mod.rs
src/elements/io/: filesrc.rs  mod.rs
src/elements/misc/: mod.rs  testsink.rs  testsrc.rs
src/elements/text/: mod.rs  stdoutlog.rs  texttestsrc.rs
src/log/: mod.rs
src/pipeline/: error.rs  mod.rs
